@@ -61,6 +61,10 @@ Omits printing of the file and directory report at the end of the tree
 listing.
 .PP
 .TP
+.B --nolinks
+Turns off hyperlinks in HTML output.
+.PP
+.TP
 .B -a
 All files are printed.  By default tree does not print hidden files (those
 beginning with a dot `.').  In no event does tree print the file system
